Add SSL support and update env example for Neon

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,10 @@
-# Database
-DB_HOST=your-db-host
+# Database (Neon PostgreSQL)
+DB_HOST=ep-xxxxx.us-east-1.aws.neon.tech
 DB_PORT=5432
-DB_USERNAME=your-db-user
-DB_PASSWORD=your-db-password
-DB_NAME=blesscent
+DB_USERNAME=neondb_owner
+DB_PASSWORD=your-neon-password
+DB_DATABASE=neondb
+DB_SSL=true
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters
